--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 .bigc {
 display: flex;
 justify-content: center;
-margin-top: 80px;
+margin-top: -200px
 }
 
 .container {
@@ -41,17 +41,10 @@ h1 {
   color: white;
 }
 
-p {
-  text-align: center;
-  font-size: 20px;
-  color: white;
-  font-family: 'Courier New', Courier, monospace;
-
-}
-
 button {
-  font-size: 20px;
-  margin-top: 50px;
+  font-size: 40px;
+  margin-top: 200px;
+  margin-left: 700px;
   color: white;
   font-family: 'Courier New', Courier, monospace;
 }
@@ -63,15 +56,27 @@ button {
 .winmsg {
   color: white;
   text-align: center;
+  margin-top: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 40px;
+  color: #39FF14 ;
+}
+
+.playerTurn {
+  color: #04D9ff;
+  text-align: center;
   margin-top: 70px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
 }
 
-.playerTurn {
-  color: white;
+#p1, #p2 {
   text-align: center;
-  margin-top: 70px;
+  font-size: 20px;
+  color: white;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 40px;
+}
+
+input {
+  color: white;
 }
