--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 .bigc {
 display: flex;
 justify-content: center;
-margin-top: -200px
+margin-top: -245px
 }
 
 .container {
@@ -41,12 +41,21 @@ h1 {
   color: white;
 }
 
-button {
-  font-size: 40px;
-  margin-top: 200px;
+#reset {
+  font-size: 30px;
+  margin-top: 160px;
   margin-left: 700px;
   color: white;
   font-family: 'Courier New', Courier, monospace;
+}
+
+#newGame {
+  font-size: 30px;
+  margin-top: 40px;
+  margin-left: 700px;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+
 }
 
 /* player 1 {
@@ -56,7 +65,7 @@ button {
 .winmsg {
   color: white;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 30px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
   color: #39FF14 ;
@@ -79,4 +88,11 @@ button {
 
 input {
   color: white;
+}
+
+h4 {
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
 }
